updated Lithuanian translation

--- a/po/wesnoth-dw/lt.po
+++ b/po/wesnoth-dw/lt.po
@@ -1,21 +1,21 @@
-# Copyright (C) Wesnoth development team, 2010-2011.
+# Copyright (C) Wesnoth development team, 2010-2019.
 # Translators:
-#  Andrius Štikonas <andrius@stikonas.eu>, 2010-2011.
+#  Andrius Štikonas <andrius@stikonas.eu>, 2010-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2019-02-21 00:51+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
-"Language: Lithuanian\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:13
@@ -29,9 +29,8 @@ msgstr "NV"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:18
-#, fuzzy
 msgid "Beginner"
-msgstr "(Pradedantysis)"
+msgstr "Pradedantysis"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:18
@@ -45,15 +44,13 @@ msgstr "Kovotojas"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:19
-#, fuzzy
 msgid "Normal"
-msgstr "(Normalus)"
+msgstr "Normalus"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:20
-#, fuzzy
 msgid "Challenging"
-msgstr "(Iššaukiantis)"
+msgstr "Iššaukiantis"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:20
@@ -62,9 +59,8 @@ msgstr "Karys"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:21
-#, fuzzy
 msgid "Difficult"
-msgstr "(Sudėtingas)"
+msgstr "Sudėtingas"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:21
@@ -118,7 +114,7 @@ msgstr ""
 #. [scenario]: id=01_Invasion
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:36
 msgid "Invasion!"
-msgstr "Invazija"
+msgstr "Invazija!"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:45
@@ -258,7 +254,7 @@ msgid ""
 "defeat these creatures."
 msgstr ""
 "Nemirėliai. Tai bus pirmasis išbandymas tau kaip vadui, Kai Kreli. Turi "
-"nugalėti tuos padarus. "
+"nugalėti tuos padarus."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:352
@@ -583,7 +579,7 @@ msgstr "Cyp cyp!"
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:523
 msgid "Look! There is a massive bat back here."
-msgstr "Žiūrėkit! Ten gale didžiulis šikšnosparnis."
+msgstr "Žiūrėkit! Ten gale yra didžiulis šikšnosparnis."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:527
@@ -647,9 +643,8 @@ msgstr "Panašu, kad turi nuosavą šikšnosparnį."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:639
-#, fuzzy
 msgid "Look! There is a bat."
-msgstr "Žiūrėkit! Ten gale didžiulis šikšnosparnis."
+msgstr "Žiūrėkit! Ten yra šikšnosparnis."
 
 #. [message]: speaker=Kai Krellis
 #. [message]: speaker=second_unit
@@ -665,7 +660,6 @@ msgstr "Žiūrėkit! Ten kampe tūno šikšnosparnis."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:666
-#, fuzzy
 msgid "Well, kill it, and let’s keep moving."
 msgstr "Na tai užmušk jį ir judam toliau."
 
@@ -691,10 +685,8 @@ msgstr "Nemirėlis šikšnosparnis"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:752
-#, fuzzy
 msgid "Look! There is a bat. It is moving, but it looks half dead."
-msgstr ""
-"Žiūrėkit! Čia kampe šikšnosparnis. Jis juda, bet atrodo pusiau negyvas."
+msgstr "Žiūrėkit! Čia yra šikšnosparnis. Jis juda, bet atrodo leisgyvis."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:759
@@ -843,9 +835,8 @@ msgstr "Žinau kas tai. Tai trišakis audronaša. Jis leidžia valdyti žaibus."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:299
-#, fuzzy
 msgid "The trident is 14×2, magical, ranged, with <i>fire</i> damage."
-msgstr "Trišakis yra 14-2, magiškas, šaudo <i>ugnimi</i>."
+msgstr "Trišakis yra 14×2, magiškas, šaudo <i>ugnimi</i>."
 
 #. [option]
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:306
@@ -1114,7 +1105,7 @@ msgstr "Kuo tu vardu?"
 #. [message]: speaker=Keshan
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:640
 msgid "I am Keshan."
-msgstr "Aš Kešanas"
+msgstr "Aš esu Kešanas."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:645
@@ -1326,7 +1317,7 @@ msgstr ""
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:407
 msgid ""
 "One hour will work for us. It will not take all of us to defeat the undead. "
-msgstr "Valanda mums tiks. Neprireiks visų mūsų, kad nugalėtume nemirėlius."
+msgstr "Valanda mums tiks. Neprireiks visų mūsų, kad nugalėtume nemirėlius. "
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:407
@@ -1392,10 +1383,8 @@ msgstr ""
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:745
-#, fuzzy
-#| msgid "Destroy all the undead"
 msgid "Now we must defeat the undead."
-msgstr "Sunaikinkite visus nemirėlius"
+msgstr "Dabar privalome nugalėti nemirėlius."
 
 #. [message]: speaker=Marg-Tonz
 #. orc's boss' last breath, deliberately gendered instead of changing to "merfolk"
@@ -1572,8 +1561,6 @@ msgstr "Vlagnoras"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:124
-#, fuzzy
-#| msgid "What are you mermen doing here?"
 msgid "What are you merfolk doing here?"
 msgstr "Vandeniai, ką jūs čia veikiate?"
 
@@ -2239,7 +2226,7 @@ msgstr "Drauge Sidri!"
 #. [message]: speaker=Howyrth
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:436
 msgid "You know each other?!"
-msgstr "Jūs pažįstami?"
+msgstr "Jūs pažįstami?!"
 
 #. [message]: speaker=Siddry
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:440
@@ -2337,9 +2324,8 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:990
-#, fuzzy
 msgid "This sword is 8×4, magical, with <i>fire</i> damage."
-msgstr "Kalavijas yra 8-4. magiškas, deginantis <i>ugnimi</i>."
+msgstr "Kalavijas yra 8×4, magiškas, deginantis <i>ugnimi</i>."
 
 #. [option]
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:997
@@ -2407,7 +2393,8 @@ msgstr ""
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg:104
 msgid "He did not part with it willingly, so he must be dead."
-msgstr "Jei jis nepanoro skirtis su kalaviju savo valia, tai jis nebegyvas?"
+msgstr ""
+"Jis nepanoro skirtis su kalaviju savo valia, todėl jis turbūt nebegyvas."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/11_Getting_Help.cfg:108
@@ -2508,8 +2495,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:491
-#, fuzzy
-#| msgid "At dawn, the mermen got a good look at their opponents."
 msgid "At dawn, the merfolk got a good look at their opponents."
 msgstr "Auštant vandeniai gerai apžiūrėjo savo priešininkus."
 
@@ -2853,16 +2838,12 @@ msgstr "Trišakis audronaša"
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:11
-#, fuzzy
-#| msgid "This weapon shoots powerful lightning bolts at your enemies."
 msgid ""
 "This trident gives merfolk the power to throw lightning at their enemies."
-msgstr "Šis ginklas tranko priešus galingais žaibais."
+msgstr "Šis trišakis leidžia vandeniams trankyti priešus galingais žaibais."
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:13
-#, fuzzy
-#| msgid "Only a merman can use this item."
 msgid "Only the merfolk can use this item."
 msgstr "Šį daiktą gali naudoti tiktai vandeniai."
 
@@ -2884,7 +2865,7 @@ msgstr "liepsnojantis kalavijas"
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:92
 msgid "Ankh Necklace"
-msgstr ""
+msgstr "Ankho vėrinys"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/utils/items.cfg:190
@@ -2908,14 +2889,13 @@ msgstr "Palikime žiedą šikšnosparniui. Su juo jis bus naudingesnis."
 
 #. [option]
 #: data/campaigns/Dead_Water/utils/items.cfg:219
-#, fuzzy
 msgid "Someone take that off him before he hurts himself."
 msgstr "Kas nors nuimkite nuo jo tą žiedą kol jis nesusižalojo."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/utils/items.cfg:239
 msgid "Leave it."
-msgstr ""
+msgstr "Palikti."
 
 #. [message]: speaker=unit
 #: data/campaigns/Dead_Water/utils/items.cfg:254
@@ -2940,7 +2920,7 @@ msgstr "Jaučiuosi nuo jo apdujęs. Tegul paima kas kitas."
 #. [object]: id=power_ring2
 #: data/campaigns/Dead_Water/utils/items.cfg:307
 msgid "Ring of Power"
-msgstr "Galios Žiedas"
+msgstr "Galios žiedas"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/utils/items.cfg:356
@@ -2981,6 +2961,3 @@ msgid ""
 "This attack hits so hard that the opponent is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the opponent’s next turn."
 msgstr ""
-
-#~ msgid "Merman Forces"
-#~ msgstr "Vandenių pajėgos"
