--- a/po/wesnoth-anl/lt.po
+++ b/po/wesnoth-anl/lt.po
@@ -1,20 +1,21 @@
-# Copyright (C) Wesnoth development team, 2007-2011.
+# Copyright (C) Wesnoth development team, 2007-2019.
 # Translators:
-#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2011.
+#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-16 07:03 UTC\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2018-12-28 12:22+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
-"Language: Lithuanian\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [multiplayer]: id=multiplayer_A_New_Land
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:4
@@ -60,10 +61,8 @@ msgstr "Išgyvenkite iki 25 ėjimo."
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:72
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:88
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:104
-#, fuzzy
-#| msgid "teamname^Team 1"
 msgid "teamname^Settlers"
-msgstr "Komanda 1"
+msgstr "Gyventojai"
 
 #. [side]: type=Death Knight
 #. [side]: type=Orcish Sovereign
@@ -71,37 +70,33 @@ msgstr "Komanda 1"
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:155
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:186
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:217
-#, fuzzy
-#| msgid "teamname^Team 1"
 msgid "teamname^Enemies"
-msgstr "Komanda 1"
+msgstr "Priešai"
 
 #. [side]: type=Death Knight
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:133
 msgid "Mal Sevu"
-msgstr ""
+msgstr "Mal Sevu"
 
 #. [side]: type=Orcish Sovereign
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:164
 msgid "Gol Goroth"
-msgstr ""
+msgstr "Gol Gorotas"
 
 #. [side]: type=Orcish Sovereign
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:195
 msgid "Greg"
-msgstr ""
+msgstr "Gregas"
 
 #. [side]: type=Death Knight
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:226
 msgid "Mal Shiki"
-msgstr ""
+msgstr "Mal Šikis"
 
 #. [side]
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:252
-#, fuzzy
-#| msgid "teamname^Team 1"
 msgid "teamname^Prisoners"
-msgstr "Komanda 1"
+msgstr "Kaliniai"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:433
@@ -692,7 +687,7 @@ msgstr "Ką paliepsite, valdove?"
 #. [option]: description=<span size='small'>
 #: data/multiplayer/scenarios/ANL_utils/ANL_worker_options.cfg:63
 msgid "Convert to Grassland"
-msgstr ""
+msgstr "Perdirbti į pievą"
 
 #. [option]: description=<span size='small'>
 #: data/multiplayer/scenarios/ANL_utils/ANL_worker_options.cfg:64
@@ -838,9 +833,3 @@ msgstr "Kaina: 7a"
 #: data/multiplayer/scenarios/ANL_utils/ANL_worker_options.cfg:576
 msgid "Clear the Ground"
 msgstr "Išvalyti žemę"
-
-#~ msgid "The chest contains $oc_treasure gold."
-#~ msgstr "Skrynioje yra $oc_treasure aukso."
-
-#~ msgid "teamname^Team 2"
-#~ msgstr "Komanda 2"
