--- a/po/wesnoth-ei/lt.po
+++ b/po/wesnoth-ei/lt.po
@@ -1,12 +1,12 @@
-# Copyright (C) Wesnoth development team, 2007-2012.
+# Copyright (C) Wesnoth development team, 2007-2019.
 # Translators:
-#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2012.
+#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: 2017-04-08 16:04+0100\n"
+"PO-Revision-Date: 2019-01-21 23:27+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
 "Language: lt\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
-"X-Generator: Poedit 1.8.5\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:13
@@ -72,10 +72,8 @@ msgstr ""
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:24
-#, fuzzy
-#| msgid "(Intermediate level, 16 scenarios.)"
 msgid "(Novice level, 16 scenarios.)"
-msgstr "(Vidutinis lygis, 16 scenarijų.)"
+msgstr "(Naujoko lygis, 16 scenarijų.)"
 
 #. [about]
 #: data/campaigns/Eastern_Invasion/_main.cfg:28
@@ -465,7 +463,7 @@ msgid ""
 "survive. Now, come on, we do not have much time to spare!"
 msgstr ""
 "Šis įtvirtinimas jau prarastas. Jei norime išsaugoti Vesnotą, turime "
-"nugalėti šitą blogį. O dabar eime, nebegalime švaistyti laiko."
+"nugalėti šitą blogį. O dabar eime, nebegalime švaistyti laiko!"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/01_The_Outpost.cfg:436
@@ -528,18 +526,12 @@ msgstr "Kur mes? Nematau net kur žengti."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:192
-#, fuzzy
-#| msgid ""
-#| "This is an old escape tunnel for the outpost; unfortunately these caves "
-#| "are currently inhabited by trolls. Now hurry, we have to move quickly; "
-#| "the undead will surely follow us down here."
 msgid ""
 "This is an old escape route for the outpost. Unfortunately these caves are "
 "currently inhabited by trolls, who are blocking our path through the tunnel."
 msgstr ""
-"Tai senas atsitraukimo iš tvirtovės tunelis. Deja, dabar šiuose urvuose "
-"veisiasi troliai. Dabar paskubėkime, reikia sparčiai judintis, nemirėliai "
-"tikrai seks mums iš paskos."
+"Tai senas atsitraukimo iš tvirtovės kelias. Deja, dabar šiuose urvuose "
+"veisiasi troliai, kurie užblokavo mūsų taką per tunelį."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:245
@@ -779,7 +771,7 @@ msgstr "Volesas"
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:134
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:71
 msgid "Orcs"
-msgstr ""
+msgstr "Orkai"
 
 #. [side]: type=Orcish Warrior, id=Gruga-Har
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:80
@@ -930,7 +922,7 @@ msgid ""
 "him in his mission!"
 msgstr ""
 "Mano žudikas nebegyvas! Elfai už tai sumokės. Ne tiek už jo mirtį, kiek už "
-"sužlugdytą jo misiją."
+"sužlugdytą jo misiją!"
 
 #. [message]: speaker=Volas
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:333
@@ -1223,7 +1215,7 @@ msgstr ""
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/04c_Mal-Ravanals_Capital.cfg:501
 msgid "You know this lich?"
-msgstr ""
+msgstr "Ar žinai šį ličą?"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/04c_Mal-Ravanals_Capital.cfg:506
@@ -1781,7 +1773,7 @@ msgstr "Žmogėdrų treniravimas"
 #. [side]
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:41
 msgid "Ogres"
-msgstr ""
+msgstr "Žmogėdros"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:76
@@ -1842,7 +1834,7 @@ msgstr ""
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:159
 msgid "Help!"
-msgstr ""
+msgstr "Gelbėkit!"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/08_Training_the_Ogres.cfg:203
@@ -1909,7 +1901,7 @@ msgstr "Dvarfai"
 #. [side]: type=Orcish Nightblade, id=Bagork
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:75
 msgid "Bagork"
-msgstr ""
+msgstr "Bagorkas"
 
 #. [side]: type=Elvish Avenger, id=Elandin
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:97
@@ -2011,12 +2003,12 @@ msgstr ""
 #. [message]: speaker=Bagork
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:270
 msgid "I will kill all of you!"
-msgstr ""
+msgstr "Visus jus užmušiu!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:285
 msgid "Not very likely."
-msgstr ""
+msgstr "Mažai tikėtina."
 
 #. [message]: speaker=Prok-Bak
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:296
@@ -2318,7 +2310,7 @@ msgstr "Po kiek laiko..."
 #. [message]: id=$unit.id
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:686
 msgid "So, how do I look?"
-msgstr ""
+msgstr "Na, kaip aš atrodau?"
 
 #. [message]: id=$unit.id
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:691
@@ -2345,12 +2337,12 @@ msgstr ""
 #. [message]: speaker=King Dra-Nak
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:813
 msgid "Hey! Who are you? Get her!"
-msgstr ""
+msgstr "Ei! Kas tu? Sučiupkit ją!"
 
 #. [message]: speaker=King Dra-Nak
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:820
 msgid "Hey! Who are you? Get him!"
-msgstr ""
+msgstr "Ei! Kas tu? Sučiupkit jį!"
 
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:827
@@ -3065,7 +3057,7 @@ msgstr ""
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:324
 msgid "I will begin preparing our troops."
-msgstr ""
+msgstr "Pradėsiu ruošti mūsų karius."
 
 #. [scenario]: id=17a_The_Duel
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:4
@@ -3084,7 +3076,7 @@ msgstr "Mal-Ravanalas"
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:65
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:180
 msgid "Defeat Mal-Ravanal while Dacyn is nearby"
-msgstr "Nugalėkite Mal-Ravanalą, kol Deisynas netoliese."
+msgstr "Nugalėkite Mal-Ravanalą, kol Deisynas  yra netoliese"
 
 #. [message]: speaker=Mal-Ravanal
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:97
@@ -3205,7 +3197,7 @@ msgstr "Mal-Hadanakas"
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:273
 msgid "You dare to attack me? Now you will pay!"
-msgstr ""
+msgstr "Drįsti mane pulti? Dabar sumokėsi!"
 
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:276
@@ -3235,7 +3227,7 @@ msgstr "Mal-Akranbralas"
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:285
 msgid "You will serve me in death!"
-msgstr ""
+msgstr "Tarnausi man mirtyje!"
 
 #. [value]
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:288
@@ -3278,6 +3270,8 @@ msgid ""
 "They killed the royal family... now, even if we save Weldyn, Wesnoth has "
 "fallen."
 msgstr ""
+"Jie nužudė karališkąją šeima... Dabar net jei išgelbėsime Veldyną, Vesnotas "
+"krito."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:697
@@ -3394,7 +3388,7 @@ msgstr ""
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:179
 msgid "I am honored, your highness."
-msgstr ""
+msgstr "Aš pagerbtas, jūsų didenybe."
 
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:189
@@ -3494,7 +3488,7 @@ msgstr ""
 #. [unit_type]: id=Lich Lord
 #: data/campaigns/Eastern_Invasion/units/Lich_Lord.cfg:7
 msgid "Lich Lord"
-msgstr ""
+msgstr "Ličų valdovas"
 
 #. [unit_type]: id=Mounted Fighter, race=human
 #: data/campaigns/Eastern_Invasion/units/Mounted_Fighter.cfg:4
@@ -3630,7 +3624,7 @@ msgstr "Aš tave susprogdinsiu!"
 #. [message]: speaker=Grug
 #: data/campaigns/Eastern_Invasion/utils/final_battle.cfg:61
 msgid "Grug again dead make!"
-msgstr ""
+msgstr "Grugas vėl padarė mirti!"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/utils/final_battle.cfg:76
@@ -3667,7 +3661,7 @@ msgstr ""
 msgid ""
 "Wearing this amulet will cause every blow you deal to inflict <i>arcane</i> "
 "damage!"
-msgstr "Dėvint šį amuletą, kiekvienas smūgis darys <i>paslaptingą</i> žalą."
+msgstr "Dėvint šį amuletą, kiekvienas smūgis darys <i>paslaptingą</i> žalą!"
 
 #: data/campaigns/Eastern_Invasion/utils/macros.cfg:63
 msgid "holy amulet^Take it"
@@ -3685,6 +3679,3 @@ msgstr "Aš negaliu naudoti šio daikto! Tegu kas kitas jį paima."
 #: data/campaigns/Eastern_Invasion/utils/macros.cfg:67
 msgid "Holy Amulet"
 msgstr "Šventas amuletas"
-
-#~ msgid "Very well. The best of luck in your battle."
-#~ msgstr "Kaip norite. Geriausios kloties mūšyje."
