--- a/po/wesnoth-sof/lt.po
+++ b/po/wesnoth-sof/lt.po
@@ -1,21 +1,21 @@
-# Copyright (C) Wesnoth development team, 2007-2011.
+# Copyright (C) Wesnoth development team, 2007-2019.
 # Translators:
-#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2011.
+#  Andrius Štikonas <andrius@stikonas.eu>, 2007-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.11\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2019-01-27 14:50+0000\n"
 "Last-Translator: Andrius Štikonas <andrius@stikonas.eu>\n"
 "Language-Team: Lithuanian <wesnoth-lt@googlegroups.com>\n"
-"Language: Lithuanian\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:11
@@ -34,15 +34,13 @@ msgstr "Kovotojas"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:20
-#, fuzzy
 msgid "Normal"
-msgstr "(Normalus)"
+msgstr "Normalus"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:21
-#, fuzzy
 msgid "Challenging"
-msgstr "(Iššaukiantis)"
+msgstr "Iššaukiantis"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:21
@@ -51,9 +49,8 @@ msgstr "Šarvuotis"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:22
-#, fuzzy
 msgid "Difficult"
-msgstr "(Sudėtingas)"
+msgstr "Sudėtingas"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:22
@@ -86,10 +83,8 @@ msgstr ""
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:34
-#, fuzzy
-#| msgid "(Expert level, 9 scenarios.)"
 msgid "(Hard level, 9 scenarios.)"
-msgstr "(Eksperto lygis, 9 scenarijai.)"
+msgstr "(Sudėtingas lygis, 9 scenarijai.)"
 
 #. [about]
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:39
@@ -815,8 +810,7 @@ msgstr ""
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg:319
 msgid "Don’t we have troops positioned near these glyphs, to unlock them?"
-msgstr ""
-"Argi mes neturim dalinių šalia tų ypatingų plytelių, kad jas numintume?"
+msgstr "Argi mes neturim karių šalia tų ypatingų plytelių, kad jas numintume?"
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg:323
@@ -1211,12 +1205,6 @@ msgstr "Monstrai"
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:40
-#, fuzzy
-#| msgid ""
-#| "The journey to the far northern wastelands was long and perilous. For the "
-#| "tunnels were winding and treacherous, and the paths were not safe from "
-#| "orcs, or worse. Nevertheless, they did reach the northlands, and began to "
-#| "search for the runesmith named Thursagan — the sage of fire."
 msgid ""
 "The journey to the far northern wastelands was long and perilous. For the "
 "tunnels were winding and treacherous, and the paths were not safe from orcs, "
@@ -1225,7 +1213,7 @@ msgid ""
 msgstr ""
 "Kelionė į šiaurines dykras buvo ilga ir sunki. Ten vedė vingiuoti ir "
 "klastingi tuneliai. Kelią pastodavo orkai, ar dar baisesni sutvėrimai. "
-"Nepaisant visko, jie priėjo šiaurines žemes ir pradėjo ieškoti runų meistro "
+"Nepaisant visko, jie priėjo Šiaurines žemes ir pradėjo ieškoti runų meistro "
 "vardu Tursaganas – ugnies išminčiaus."
 
 #. [objective]: condition=win
@@ -1304,15 +1292,11 @@ msgstr ""
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:224
-#, fuzzy
-#| msgid ""
-#| "Except for trolls and ogres, right? They live in the far northlands. "
-#| "They’re probably lurking around here somewhere."
 msgid ""
 "Except for trolls and ogres, right? They live in the far Northlands. They’re "
 "probably lurking around here somewhere."
 msgstr ""
-"Aha, išskyrus trolius ir žmogėdras? Jie gyvena tolimoje šiaurėje. "
+"Aha, išskyrus trolius ir žmogėdras? Jie gyvena tolimoje Šiaurėje. "
 "Greičiausiai tūno kur nors netoliese."
 
 #. [message]: speaker=Baglur
@@ -1539,10 +1523,8 @@ msgstr ""
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:135
-#, fuzzy
-#| msgid "Yes, we did. And that is Krawg, who helped us in the northlands."
 msgid "Yes, we did. And that is Krawg, who helped us in the Northlands."
-msgstr "Taip, įtikinom. O tai Kravgas, jis pagelbėjo mums šiaurėje."
+msgstr "Taip, įtikinom. O tai Kravgas, jis pagelbėjo mums Šiaurinėse žemėse."
 
 #. [message]: speaker=Krawg
 #. "Yeah! Me Krawg!"
@@ -2146,7 +2128,7 @@ msgstr ""
 #. [label]
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:138
 msgid "Shorbear caves"
-msgstr ""
+msgstr "Šorbero urvai"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:146
@@ -2155,9 +2137,6 @@ msgstr "Nugalėkite Glonoiną, Šorbero klano vadą"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Have all heroes in the Shorbear caves while no enemies are in the caves"
 msgid "Have all heroes, and no enemies, in the Shorbear caves"
 msgstr "Visi herojai turi būti Šorbero urvuose, kuriuose neturi būti priešų"
 
@@ -3163,9 +3142,6 @@ msgstr "Ta graži metalinė uola yra mano! Pasitraukite nuo jos!"
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:422
 #, fuzzy
-#| msgid ""
-#| "This forge will work perfectly. Give me a few days here, and I can "
-#| "reforge the Sceptre of Fire to fulfill its purpose."
 msgid ""
 "This forge will work perfectly. Give me a day or two here, and I can reforge "
 "the Sceptre of Fire to fulfill its purpose."
@@ -3705,6 +3681,3 @@ msgstr "Ach..."
 #: data/campaigns/Sceptre_of_Fire/utils/utils.cfg:71
 msgid "Kraa..."
 msgstr "Hr..."
-
-#~ msgid "Kawn"
-#~ msgstr "Kavnas"
