--- a/po/wesnoth-nr/de.po
+++ b/po/wesnoth-nr/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-09-13 18:24+0200\n"
+"PO-Revision-Date: 2019-02-23 21:26+0100\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -78,7 +78,7 @@ msgstr ""
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:23
 msgid "(Expert level, 13 scenarios.)"
-msgstr "(Einstufung: Schwierig, 13 Szenarien)"
+msgstr "(Einstufung: Experte, 13 Szenarien)"
 
 #. [about]
 #: data/campaigns/Northern_Rebirth/_main.cfg:28
@@ -133,14 +133,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
-#, fuzzy
-#| msgid ""
-#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
-#| "strong fortifications around Dwarven Doors. The people who called it "
-#| "home, dwarven and human alike, knew that the wealth of their city might "
-#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
-#| "themselves well able to fight off any bandit gang or petty warlord that "
-#| "could arise in the thinly-settled northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2425,11 +2417,6 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:736
-#, fuzzy
-#| msgid ""
-#| "If you have no objection, Tallin, we would like to join you. These "
-#| "northlands are hardly safe these days for anyone to be traveling on their "
-#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "Northlands are hardly safe these days for anyone to be traveling on their "
@@ -7213,12 +7200,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
-#, fuzzy
-#| msgid ""
-#| "Princess, we are not seeking to do business here: <i>“I do this for you "
-#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
-#| "which will forever ensure the peace and prosperity of these northlands. "
-#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
