German translation – fix terminology
cleaning = bereinigen
purging  = leeren

--- a/po/wesnoth-lib/de.po
+++ b/po/wesnoth-lib/de.po
@@ -5906,27 +5906,27 @@ msgstr "B"
 
 #: src/gui/dialogs/game_cache_options.cpp:162
 msgid "Cache Cleaned"
-msgstr "Cache geleert"
+msgstr "Cache bereinigt"
 
 #: src/gui/dialogs/game_cache_options.cpp:163
 msgid "The game data cache has been cleaned."
-msgstr "Spieldaten Cache wurde geleert."
+msgstr "Spieldaten-Cache wurde bereinigt."
 
 #: src/gui/dialogs/game_cache_options.cpp:165
 msgid "The game data cache could not be completely cleaned."
-msgstr "Spieldaten Cache konnte nicht geleert werden."
+msgstr "Spieldaten-Cache konnte nicht vollständig bereinigt werden."
 
 #: src/gui/dialogs/game_cache_options.cpp:181
 msgid "Cache Purged"
-msgstr "Cache gesäubert"
+msgstr "Cache geleert"
 
 #: src/gui/dialogs/game_cache_options.cpp:182
 msgid "The game data cache has been purged."
-msgstr "Spieldaten Cache wurde gesäubert."
+msgstr "Spieldaten-Cache wurde geleert."
 
 #: src/gui/dialogs/game_cache_options.cpp:184
 msgid "The game data cache could not be purged."
-msgstr "Spieldaten Cache konnte nicht gesäubert werden."
+msgstr "Spieldaten-Cache konnte nicht vollständig geleert werden."
 
 #: src/gui/dialogs/game_load.cpp:264
 msgid "The selected file is corrupt: "
