--- a/po/wesnoth-did/it.po
+++ b/po/wesnoth-did/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2019-01-28 21:18+0100\n"
+"PO-Revision-Date: 2019-02-26 18:53+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -425,7 +425,7 @@ msgid ""
 "had taught you more sense."
 msgstr ""
 "Sissignore, sarebbe stato meglio che trafficare con la magia nera. La gente "
-"avrebbe ricostruito la città come hanno sempre fatto in passato. I maghi "
+"avrebbe ricostruito la città come ha sempre fatto in passato. I maghi "
 "avrebbero dovuto insegnarti più buon senso."
 
 #. [message]: speaker=Malin Keshar
@@ -548,8 +548,8 @@ msgstr ""
 "orchi. Maledice i maghi anziani per averlo allontanato dall’isola di Alduin "
 "preparato a metà, solo per piombare nel conflitto. Maledice Drogan per la "
 "mancanza di coraggio necessaria a vedere ciò che va fatto. Maledice con "
-"ancora più ferocia gli orchi per avergli sottratto il padre e la patria con "
-"i loro attacchi senza fine."
+"ancora più ferocia gli orchi per avergli sottratto il padre e la patria coi "
+"loro attacchi senza fine."
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:24
@@ -1071,7 +1071,7 @@ msgstr ""
 "alcuni adepti dell’oscurità, bramosi di essere d’aiuto nel combattimento, "
 "viaggiano verso nord per unirsi alla coppia. <i>«Sono abbastanza utili in "
 "combattimento»</i>, dice il negromante a Malin, <i>«ma nessuno di loro ha un "
-"decimo del tuo potenziale»</i>."
+"decimo del tuo potenziale.»</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:27
@@ -2115,7 +2115,7 @@ msgstr "Telemon il Massacratore"
 #. [message]: speaker=Telemon
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:734
 msgid "Foul necromancer! Your time has come!"
-msgstr "Pazzo di un necromante! Il tuo tempo è finito!"
+msgstr "Pazzo di un negromante! Il tuo tempo è finito!"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:738
@@ -2429,7 +2429,7 @@ msgstr ""
 "Mi arrendo di fronte a tutto ciò. Andrò nella vecchia città dei troll ed "
 "imparerò ad utilizzare il fuoco della montagna. In tempi futuri, domineranno "
 "atteggiamenti meno conservativi, e posso certamente permettermi di "
-"aspettare. Nel frattempo, stiamo facendo il possibilie per avvicinare quel "
+"aspettare. Nel frattempo, stiamo facendo il possibile per avvicinare quel "
 "giorno.”</i>"
 
 #. [part]
@@ -2475,7 +2475,7 @@ msgstr ""
 "libro e non aveva più bisogno dell’originale: se avesse lasciato che un "
 "altro eroe sciocco lo prendesse, un altro studente avrebbe seguito le sue "
 "orme? Avrebbe potuto funzionare il piano dell’autore? Forse i lich avrebbero "
-"potutto essere accettati nella società, se avesse semplicemente aspettato?"
+"potuto essere accettati nella società, se avesse semplicemente aspettato?"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:124
@@ -2835,7 +2835,7 @@ msgid ""
 msgstr ""
 "In salvo fuori dalla caverna, lo sciocco eroe prova a distruggere il libro. "
 "Nessuno dei tentativi lasciò più di una ammaccatura o scalfittura, ma ad "
-"ogni tentativo si sentiva un nuovo ulro provenire dalla bocca della caverna. "
+"ogni tentativo si sentiva un nuovo urlo provenire dalla bocca della caverna. "
 "Finalmente l’entrata della caverna collassò, e tutto rimase immobile."
 
 #. [part]
