--- a/po/wesnoth-thot/nl.po
+++ b/po/wesnoth-thot/nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2010-12-27 14:24+0100\n"
 "Last-Translator: Floris Kint <floris.kint@gmail.com>\n"
