--- a/po/wesnoth-tsg/nl.po
+++ b/po/wesnoth-tsg/nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2009-09-23 12:03+0100\n"
 "Last-Translator: IJsbrand Oudshoorn <oudshoorn@eitri.nl>\n"
@@ -1498,7 +1498,10 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:358
-msgid "I shall not join these accursed undead! Bury me deeply, my friends..."
+#, fuzzy
+#| msgid ""
+#| "I shall not join these accursed undead! Bury me deeply, my friends..."
+msgid "I shall not join these accursed undead! Bury me deeply my friends..."
 msgstr ""
 "Ik zal me niet bij deze verdoemde ondoden vervoegen! Begraaf mij diep, mijn "
 "vrienden..."
