--- a/po/wesnoth-utbs/nl.po
+++ b/po/wesnoth-utbs/nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2010-09-20 19:15+0100\n"
 "Last-Translator: Jon Jacobs <jon@telenet.be>\n"
