--- a/po/wesnoth-anl/nl.po
+++ b/po/wesnoth-anl/nl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+CVS\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
 "PO-Revision-Date: 2010-12-27 18:00+0100\n"
 "Last-Translator: ai0867 <ai0867@gmail.com>\n"
