--- a/po/wesnoth-dw/nl.po
+++ b/po/wesnoth-dw/nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
 "PO-Revision-Date: 2010-11-09 20:45+0100\n"
 "Last-Translator: l <l@l.nl>\n"
