--- a/po/wesnoth-editor/nl.po
+++ b/po/wesnoth-editor/nl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-editor\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
 "PO-Revision-Date: 2010-12-27 17:53+0100\n"
 "Last-Translator: Alexander van Gessel <ai0867@gmail.com>\n"
