--- a/po/wesnoth-l/nl.po
+++ b/po/wesnoth-l/nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
 "PO-Revision-Date: 2008-04-09 15:52+0100\n"
 "Last-Translator: Foppe Benedictus <foppe.benedictus@gmail.com>\n"
@@ -856,7 +856,7 @@ msgstr ""
 msgid ""
 "We have tarried here for far too long... There is no way we can reach "
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
-"Retreat!"
+"Retreat!!"
 msgstr ""
 
 #. [message]: speaker=narrator
