--- a/po/wesnoth-multiplayer/nl.po
+++ b/po/wesnoth-multiplayer/nl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+CVS\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2010-06-22 22:52+0100\n"
 "Last-Translator: Koen Vervloesem <koen@vervloesem.eu>\n"
