--- a/po/wesnoth-sotbe/nl.po
+++ b/po/wesnoth-sotbe/nl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+CVS\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2009-10-02 17:19+0100\n"
 "Last-Translator: IJsbrand Oudshoorn <oudshoorn@eitri.nl>\n"
