--- a/po/wesnoth-tb/nl.po
+++ b/po/wesnoth-tb/nl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2008-03-01 11:45+0100\n"
 "Last-Translator: Joeri Melis <joeri_melis@hotmail.com>\n"
