--- a/po/wesnoth-trow/nl.po
+++ b/po/wesnoth-trow/nl.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
 "PO-Revision-Date: 2009-04-19 15:10+0200\n"
 "Last-Translator: Alexander van Gessel (AI/AI0867) <ai0867@gmail.com>\n"
